# RAG_BACKEND

./: README.md  main.py  pyproject.toml  render.yaml  requirements.txt
app/: main.py
app/api/: routes.py
app/core/: config.py  embeddings.py  insurance_validator.py
app/models/: schemas.py
app/services/: __init__.py  document_processor.py  llm_service.py  vector_store.py
data/vector_store/: chunks.pkl  documents_metadata.json  faiss_index
