[project]
name = "rag-backend"
version = "0.1.0"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "pydantic",
    "pydantic-settings",
    "PyPDF2",
    "faiss-cpu",
    "numpy",
    "google-generativeai",
    "aiofiles",
    "python-dotenv",
    "loguru",
    "sentence-transformers"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"